--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexaoPadrao": "",
+    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=RhAula; Integrated Security=True; TrustServerCertificate=True",
     "SAConnectionString": "",
-    "AzureTableName": "FuncionarioLog"
+    "AzureTableName": ""
   }
 }
