--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "",
+    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=RhAula; Integrated Security=True; TrustServerCertificate=True",
     "SAConnectionString": "",
-    "AzureTableName": "FuncionarioLog"
+    "AzureTableName": ""
   }
 }
